# pyalgo

./: .gitignore  README.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
src/: conftest.py
src/diseaz/algo/: error.py  graph.py  ratelimit.py  topsort.py
tests/: test_ratelimit.py
