[metadata]
name = diseaz-algo
version = 0.0.1
author = Dmitry Azhichakov
author_email = dazhichakov@gmail.com
description = Collection of random algorithms and tools
long_description = file: README.md
url = https://github.com/diseaz/algo
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    =src
packages = find_namespace:

[options.packages.find]
where=src

[options.package_data]
mypackage = py.typed

[flake8]
max-line-length = 120
exclude = .git,__pycache__,build,dist,setup.py

[tool:pytest]
testpaths =
    src
    tests
addopts = --doctest-modules

[mypy]
files = src
mypy_path = src
namespace_packages = True
explicit_package_bases = True
